new python program

--- a/mydemo.ipynb
+++ b/mydemo.ipynb
@@ -63,6 +63,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n Sum of the digit of given number = 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "Number = int(input(\"Enter the number : \"))\n",
+    "Sum = 0\n",
+    "\n",
+    "while(Number>0):\n",
+    "     Remainder = Number % 10\n",
+    "     Sum = Sum + Remainder\n",
+    "     Number = Number //10\n",
+    "\n",
+    "print(\"\\n Sum of the digit of given number = %d\" %Sum) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
