--- a/mydemo.ipynb
+++ b/mydemo.ipynb
@@ -1,28 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5 64-bit"
-  },
-  "interpreter": {
-   "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -30,8 +6,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[12, 24, 88]\n"
      ]
@@ -45,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Dev-ameyjoshi\n"
+      "Amey Joshi\n"
      ]
     }
    ],
@@ -67,10 +43,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "\n Sum of the digit of given number = 7\n"
+      "\n",
+      " Sum of the digit of given number = 7\n"
      ]
     }
    ],
@@ -88,10 +65,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of all the desks =  18\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\r\n",
+    "\r\n",
+    "first=int(input(\"Insert number of the students of 1th class = \"))\r\n",
+    "second=int(input(\"Insert number of the students of 2th class = \"))\r\n",
+    "third=int(input(\"Insert number of the students of 1th class = \"))\r\n",
+    "\r\n",
+    "sum=first+second+third\r\n",
+    "avg=sum/2\r\n",
+    "disk=avg/2\r\n",
+    "round=math.ceil(avg)\r\n",
+    "\r\n",
+    "if ( first,second,third%2==int(0) ):\r\n",
+    "    Sum=math.ceil(first/2)+math.ceil(second/2)+math.ceil(third/2)\r\n",
+    "  \r\n",
+    "print(\"The sum of all the desks = \",Sum)"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "74a47a49a1f591059786b631a396dd4c938e7d42dc50423c71fed3f2e7167de7"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
