--- a/mydemo.ipynb
+++ b/mydemo.ipynb
@@ -65,18 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-a5f7b6d5b298>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfirst\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Insert number of the students of 1th class = \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0msecond\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Insert number of the students of 2th class = \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mthird\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Insert number of the students of 1th class = \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of all the desks =  19\n"
      ]
     }
    ],
@@ -124,6 +120,45 @@
     "else:\r\n",
     "     print(\"invalid\")\r\n",
     "\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current number is  1\n",
+      "The current number is  2\n",
+      "The current number is  3\n",
+      "The current number is  4\n",
+      "---------------------------\n",
+      "The current number is  1\n",
+      "The current number is  3\n",
+      "The current number is  5\n",
+      "---------------------------\n",
+      "The current number is  5\n",
+      "The current number is  4\n",
+      "The current number is  3\n",
+      "The current number is  2\n",
+      "The current number is  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(1,5):\r\n",
+    "    print (\"The current number is \",number)\r\n",
+    "print(\"---------------------------\")\r\n",
+    "\r\n",
+    "for number in range(1,7,2):\r\n",
+    "    print (\"The current number is \",number)\r\n",
+    "print(\"---------------------------\")\r\n",
+    "\r\n",
+    "for number in range(5,0,-1):\r\n",
+    "    print (\"The current number is \",number)\r\n"
    ]
   },
   {
